Created javascript program for slider - long version of code

--- a/slider.html
+++ b/slider.html
@@ -8,7 +8,43 @@
     <link rel="stylesheet" href="slider.css" />
   </head>
   <body>
+    <div class="container">
+      <section class="upper-section">
+        <img src="img/arrow.png" alt="arrow head left" class="arrow left" />
+        <div class="frame">
+          <div class="slider">
+            <img
+              src="https://images.pexels.com/photos/175039/pexels-photo-175039.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+              class="images"
+            />
+            <img
+              src="https://images.pexels.com/photos/1319460/pexels-photo-1319460.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+              class="images"
+            />
+            <img
+              src="https://images.pexels.com/photos/221045/pexels-photo-221045.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+              class="images"
+            />
+            <img
+              src="https://images.pexels.com/photos/2582818/pexels-photo-2582818.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+              alt=""
+              class="images"
+            />
+          </div>
+        </div>
+        <img src="img/arrow.png" alt="arrow head left" class="arrow right" />
+      </section>
+      <section class="lower-section">
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+        <div class="bullet"></div>
+      </section>
+    </div>
+
     <script src="slider.js"></script>
   </body>
 </html>
-
