adding button functions and finishing touches

--- a/slider.html
+++ b/slider.html
@@ -38,10 +38,10 @@
         <img src="img/arrow.png" alt="arrow head left" class="arrow right" />
       </section>
       <section class="lower-section">
-        <div class="bullet"></div>
-        <div class="bullet"></div>
-        <div class="bullet"></div>
-        <div class="bullet"></div>
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
+        <div class="button"></div>
       </section>
     </div>
 
